--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="#">LOGO</a>
+            <a href="#">Undraw.</a>
         </div>
        
         <nav class="navbar">
             <ul class="menu">
                 <li class="under"><a href="#">Home</a></li>
                 <li class="under"><a href="#">About</a></li>
-                <li class="under"><a href="#">Service</a></li>
+                <li class="under"><a href="#">Services</a></li>
                 <li class="under"><a href="#">Blog</a></li>
                 <li class="under"><a href="#">Contact</a></li>
             </ul>
@@ -31,6 +31,27 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
+
+    <section class="banner">
+        <div class="banner-container">
+            <div class="banner-left">
+                <div class="static-txt">We're a </div>
+                <div class="dynamic-txt">
+                    <li><span>Business</span></li>
+                    <li><span>Development</span></li>
+                    <li><span>Productivity</span></li>
+                </div>
+                <div class="banner-left-content">
+                    <p>A small river named Duden flows by their place and 
+                        supplies it with the necessary regelialia.</p>
+                </div>
+            </div>
+
+            <div class="banner-right">
+                <img src="./src/assets/image/banner.svg" alt="">
+            </div>
+        </div>
+    </section>
 
     <script src="./src/assets/js/Bar.js"></script>
 </body>
