--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="./src/assets/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <a href="#">Undraw.</a>
+            <a href="#">
+                <img src="./src/assets/image/DIGIV-Logo-1.png" alt="">
+            </a>
         </div>
        
         <nav class="navbar">
@@ -34,22 +36,13 @@
 
     <section class="banner">
         <div class="banner-container">
-            <div class="banner-left">
-                <div class="static-txt">We're a </div>
-                <div class="dynamic-txt">
-                    <li><span>Business</span></li>
-                    <li><span>Development</span></li>
-                    <li><span>Productivity</span></li>
-                </div>
-                <div class="banner-left-content">
-                    <p>A small river named Duden flows by their place and 
-                        supplies it with the necessary regelialia.</p>
-                </div>
+            <div class="banner-text">
+                <h3>Đây là banner</h3>
+                <h1>This is ....</h1>
+                <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing</p>
             </div>
-
-            <div class="banner-right">
-                <img src="./src/assets/image/banner.svg" alt="">
-            </div>
+            <img src="./src/assets/image/banner.svg" alt="">
+            
         </div>
     </section>
 
