--- a/index.html
+++ b/index.html
@@ -153,8 +153,45 @@
     </section>
       <!-- section services ends -->
 
+    <secsion class="counter-up">
+        <div class="counter-up-container">
+            <div class="container">
+                <!-- <i class="fas fa-utensils"></i> -->
+                <div class="icon-num">
+                    <span class="num" data-val="125">000</span>
+                    <p>+</p>
+                </div>
+               
+                <span class="text">Years experience</span>
+                </div>
+            <div class="container">
+                <!-- <i class="fas fa-smile-beam"></i> -->
+                <div class="icon-num">
+                    <span class="num" data-val="340">000</span>
+                    <p>+</p>
+                </div>
+                <span class="text">Completed projects</span>
+            </div>
+            <div class="container">
+                <!-- <i class="fas fa-list"></i> -->
+                <div class="icon-num">
+                    <span class="num" data-val="225">000</span>
+                    <p>+</p>
+                </div>
+                <span class="text">Companies woked</span>
+            </div>
+            <div class="container">
+                <!-- <i class="fas fa-star"></i> -->
+                <div class="icon-num">
+                    <span class="num" data-val="280">000</span>
+                    <p>+</p>
+                </div>
+                <span class="text">Five Stars</span>
+            </div>
+          </div>
+    </secsion>
         <!-- section blogs starts -->
-    <section class="services">
+    <section class="blog">
         
     </section>
       <!-- section blogs ends -->
@@ -169,6 +206,7 @@
       <!-- src js -->
    
     <script src="./src/assets/js/Bar.js"></script>
+    <script src="./src/assets/js/counterUp.js"></script>
 
 
 </body>
