--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           
                 <div class="accordion-item">
                     <button class="accordion-header">
-                        <strong>Decide how you'll organize the FAQ page.</strong><i class="fas fa-angle-down"></i>
+                        <strong>How you'll organize the FAQ page.</strong><i class="fas fa-angle-down"></i>
                     </button>
                     <div class="accordion-body">
                         Dignissimos perspiciatis amet, qui soluta aliquid, ipsa ea alias
