--- a/index.html
+++ b/index.html
@@ -249,8 +249,15 @@
                                     <div class="image-title"> 
                                         <img src="./src/assets/image/about-avatar.webp" alt="" class="card-img">        
                                         <div class="card-name">
-                                            <h2>David Dell</h2>
+                                            <h2>David Dell </h2>
                                             <h3>Marketing Manager</h3>
+                                        </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -274,6 +281,13 @@
                                         <div class="card-name">
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
+                                        </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -299,6 +313,13 @@
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
                                         </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -322,6 +343,13 @@
                                         <div class="card-name">
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
+                                        </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -347,6 +375,13 @@
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
                                         </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -370,6 +405,13 @@
                                         <div class="card-name">
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
+                                        </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -395,6 +437,13 @@
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
                                         </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -419,6 +468,13 @@
                                         <h2>David Dell</h2>
                                         <h3>Marketing Manager</h3>
                                     </div>
+                                    <div class="card-star">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 </div>
                             </div>
 
@@ -442,6 +498,13 @@
                                         <div class="card-name">
                                             <h2>David Dell</h2>
                                             <h3>Marketing Manager</h3>
+                                        </div>
+                                        <div class="card-star">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
                                         </div>
                                     </div>
                                 </div>
