--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <!-- slide 2 -->
                         <div class="card swiper-slide">
                             <div class="card-item">
-                                <div class="fa-quote">
+                                 <div class="fa-quote">
                                     <i class="fas fa-quote-left"></i>
                                 </div>
                                 <div class="image-content">
@@ -525,6 +525,76 @@
             </div>
         </div>
     </section>
+
+    <secsion class="counter-number">
+        <div class="counter-wrapper">
+            <div class="container">
+                <i class="fas fa-utensils"></i>
+                <span class="num" data-val="400">000</span>
+                <span class="text">Meals Delivered</span>
+            </div>
+            <div class="container">
+                <i class="fas fa-smile-beam"></i>
+                <span class="num" data-val="340">000</span>
+                <span class="text">Happy Customers</span>
+            </div>
+            <div class="container">
+              <i class="fas fa-list"></i>
+              <span class="num" data-val="225">000</span>
+              <span class="text">Menu Items</span>
+            </div>
+            <div class="container">
+              <i class="fas fa-star"></i>
+              <span class="num" data-val="280">000</span>
+              <span class="text">Five Stars</span>
+            </div>
+          </div>
+    </secsion>
+
+    <section class="contact">
+        
+        <div class="contact-container">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.164668059681!2d105.77468951440802!3d21.066084391880096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3134552bfa617841%3A0x4da7330a40df367f!2zNDIgTmfDtSA1MjEsIEPhu5UgTmh14bq_LCBU4burIExpw6ptLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1648321158073!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <form id="form" class="form">
+                <div class="form-list">
+                    <div class="form-control">
+                        <label for="username">Name</label>
+                        <input type="text" placeholder="florinpop17" id="username" />
+                        <i class="fas fa-check-circle"></i>
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error message</small>
+                    </div>
+                    <div class="form-control">
+                        <label for="username">Email</label>
+                        <input type="email" placeholder="a@florin-pop.com" id="email" />
+                        <i class="fas fa-check-circle"></i>
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error message</small>
+                    </div>
+                    <div class="form-control form-message">
+                        <label for="message">Message your</label>
+                        <input type="text"style="padding: 10px 0 120px 10px" placeholder="Message text ..."id="text" />
+                    </div>
+                    <!-- <div class="form-control">
+                        <label for="username">Password</label>
+                        <input type="password" placeholder="Password" id="password"/>
+                        <i class="fas fa-check-circle"></i>
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error message</small>
+                    </div>
+                    <div class="form-control">
+                        <label for="username">Password check</label>
+                        <input type="password" placeholder="Password two" id="password2"/>
+                        <i class="fas fa-check-circle"></i>
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error message</small>
+                    </div> -->
+                    <button>Submit</button>
+                </div>
+            </form>
+
+    </section>
         <!-- section blogs starts -->
     <section class="blog">
         <!-- <div class="blog-title">
@@ -552,5 +622,6 @@
     <script src="./src/assets/js/counterUp.js"></script>
     <script src="./src/assets/js/accordion.js"></script>
     <script src="./src/assets/js/swiperslide.js"></script>
+    <script src="./src/assets/js/contacttValidation.js"></script>
 </body>
 </html>
