--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                         <input type="text" placeholder="Email" id="email">
                     </div>
                     <div class="input_field">
-                        <textarea placeholder="Message" id="message"></textarea>
+                        <textarea placeholder="Message" id="message" aria-label="message" ></textarea>
                     </div>
                     <div class="btn">
                         <input type="submit">
@@ -582,6 +582,15 @@
             
 
     </section>
+
+    <!-- section subcribe starts -->
+    <secsion class="subcribe">
+        <div class="subcribe-container">
+            
+        </div>
+    </secsion>
+    <!-- secsion subcribe ends -->
+
         <!-- section blogs starts -->
     <section class="blog">
         <!-- <div class="blog-title">
